--- a/layout/index-content.ejs
+++ b/layout/index-content.ejs
@@ -199,8 +199,10 @@
         <div class="swiper swiper-container">
           <div class="swiper-wrapper pb-4">
             <div class="swiper-slide">
-              <img src="../assets/images/recommend-1.png" alt="">
-              <div class="info bg-neutral-7 p-4">
+              <div class="recommend-swiper-img recommend-swiper-img_1">
+                <%- include('./layout/collect-love'); -%>
+              </div>
+              <a href="singleTrip.html" class="info bg-neutral-7 p-4 w-100">
                 <h5 class="pb-2 fw-medium">澎湖花火節</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-neutral-2 fs-6">3天2夜澎湖花火節</p>
@@ -210,10 +212,13 @@
                     </span>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
-            <div class="swiper-slide"><img src="../assets/images/recommend-1.png" alt="">
-              <div class="info bg-neutral-7 p-4">
+            <div class="swiper-slide">
+              <div class="recommend-swiper-img recommend-swiper-img_1">
+                <%- include('./layout/collect-love'); -%>
+              </div>
+              <a href="singleTrip.html" class="info bg-neutral-7 p-4 w-100">
                 <h5 class="pb-2 fw-medium">澎湖花火節</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-neutral-2 fs-6">3天2夜澎湖花火節</p>
@@ -223,10 +228,13 @@
                     </span>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
-            <div class="swiper-slide"><img src="../assets/images/recommend-1.png" alt="">
-              <div class="info bg-neutral-7 p-4">
+            <div class="swiper-slide">
+              <div class="recommend-swiper-img recommend-swiper-img_1">
+                <%- include('./layout/collect-love'); -%>
+              </div>
+              <a href="singleTrip.html" class="info bg-neutral-7 p-4 w-100">
                 <h5 class="pb-2 fw-medium">澎湖花火節</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-neutral-2 fs-6">3天2夜澎湖花火節</p>
@@ -236,7 +244,7 @@
                     </span>
                   </div>
                 </div>
-              </div>
+              </a>
             </div>
           </div>
         </div>
@@ -272,7 +280,7 @@
             <p>4.8</p>
           </div>
           <div class="comment-btn text-neutral-7 d-flex gap-2 border rounded-3 border-neutral-7 px-4 py-2 mb-6">
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined text-neutral-7">
               sms
             </span>
             <p>2,577</p>
