--- a/layout/memberOrderModal.ejs
+++ b/layout/memberOrderModal.ejs
@@ -12,27 +12,27 @@
             <h4 class="text-center text-primary-2 p-4">訂單資料</h4>
             <div class="container border border-1 rounded-4 overflow-hidden">
                 <div class="row">
-                  <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">訂單人姓名</div>
+                  <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">訂單人姓名</div>
                   <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">王小名（Mike001）</div>
-                  <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">訂購日期</div>
+                  <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">訂購日期</div>
                   <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">2024/05/01 23:59:59</div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">訂單人信箱</div>
-                    <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">traveltales@gmail.com</div>
-                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">訂單人電話</div>
+                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">訂單人信箱</div>
+                    <div class="col-lg-4 col-md-8 col-8 border border-1 py-4 ">traveltales@gmail.com</div>
+                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">訂單人電話</div>
                     <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">091234561</div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">訂單編號</div>
+                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">訂單編號</div>
                     <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">travelorder000011</div>
-                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">付款方式</div>
+                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">付款方式</div>
                     <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">信用卡</div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">總金額</div>
+                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">總金額</div>
                     <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">12,000</div>
-                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4">訂單人電話</div>
+                    <div class="col-lg-2 col-md-4 col-4 border border-1 bg-primary-4 py-4 px-2">訂單人電話</div>
                     <div class="col-lg-4 col-md-8 col-8 border border-1 py-4">091234561</div>
                 </div>
                 <div class="row">
@@ -62,7 +62,7 @@
             </div>
             <div class="container rounded-4 overflow-hidden mb-4">
                 <div class="row bg-neutral-8 py-4 overflow-hidden align-items-center justify-content-center">
-                  <div class="col-lg-2 col-md-4 col-4">
+                  <div class="col-lg-2 col-md-4 col-4 px-0">
                     <div class="modal-img rounded-4 position-relative">
                         <img src="/assets/images/order-list-1.png" alt="">
                         <div class="tag">日本</div>
@@ -73,7 +73,7 @@
                         <div class="d-flex">
                             <span class="material-symbols-outlined d-none d-md-block">
                             calendar_today</span>
-                            <p class="text-neutral-3">2024/08/08(四)~2024/08/10(六)</p>
+                            <p class="text-neutral-3 fs-sm-8 fs-7">2024/08/08(四)~2024/08/10(六)</p>
                         </div>
                   </div>
                   <div class="col-lg-3 col-md-4 col-4 py-4 text-lg-end text-start">
@@ -88,7 +88,7 @@
             </div>
             <div class="container rounded-4 overflow-hidden mb-4">
                 <div class="row bg-neutral-8 py-4 overflow-hidden align-items-center justify-content-center">
-                  <div class="col-lg-2 col-md-4 col-4">
+                  <div class="col-lg-2 col-md-4 col-4 px-0">
                     <div class="modal-img rounded-4 position-relative">
                         <img src="/assets/images/order-list-2.png" alt="">
                         <div class="tag">台灣</div>
@@ -99,7 +99,7 @@
                         <div class="d-flex">
                             <span class="material-symbols-outlined d-none d-md-block">
                             calendar_today</span>
-                            <p class="text-neutral-3">2024/08/08(四)~2024/08/10(六)</p>
+                            <p class="text-neutral-3 fs-sm-8 fs-7">2024/08/08(四)~2024/08/10(六)</p>
                         </div>
                   </div>
                   <div class="col-lg-3 col-md-4 col-4 py-4 text-lg-end text-start">
