--- a/layout/datepicker.ejs
+++ b/layout/datepicker.ejs
@@ -27,7 +27,7 @@
 </div>
 <!--mb-->
 <div class="d-lg-none d-block w-100 mb-10">
-  <div class="d-flex flex-column justify-content-around align-items-center">
+  <div class="d-flex flex-column justify-content-around align-items-center m-3">
     <div class="container search mb-3">
       <ul class="row d-flex bg-white rounded-5 shadow align-items-center p-4">
         <li class="col-12 position-relative py-2 border-bottom d-flex align-items-center"> 
