--- a/layout/header-forpageMember.ejs
+++ b/layout/header-forpageMember.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-light z-3" >   
-  <div class="container"> 
+  <div class="container justify-content-end"> 
     <!--滾動後出現-->
     <nav class="navbar navbar-expand-lg navbar-light z-3 d-none d-lg-block fixed-top bg-light">
       <div class="container">
@@ -25,10 +25,12 @@
     <!--mobile-->
     <nav class="navbar navbar-light z-3 d-block d-lg-none fixed-top bg-light">
       <div class="d-flex justify-content-between">
-        <a class="navbar-brand position-relative" href="#">
-          <img src="../assets/images/logo2.png" width="107px" height="40"  alt="logo" class="ms-2">
+        <!--logo--->
+        <a class="navbar-brand position-relative px-4" href="../pages/index-member.html">
+          <img src="../assets/images/logo2.png" width="107px" height="40" alt="logo">
         </a>
-        <button class="navbar-toggler position-relative ms-auto pe-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <!--漢堡--->
+        <button class="navbar-toggler position-relative ms-auto" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
           <span class="material-symbols-outlined material-custom2">menu</span>
         </button>
       </div>
@@ -40,10 +42,10 @@
 
 <!--offcanvas-->
 <div class="navbar">
-  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-    <div class="offcanvas-header">
+  <div class="offcanvas offcanvas-end w-lg-25 w-100" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div class="offcanvas-header py-3">
       <a class="navbar-brand position-relative" href="../pages/index-member.html">
-        <img src="../assets/images/logo2.png" width="107px" height="40"  alt="logo" class="ms-2">
+        <img src="../assets/images/logo2.png" width="107px" height="40"  alt="logo" >
       </a>
       <button class="material-symbols-outlined material-custom2" type="button" data-bs-dismiss="offcanvas" aria-label="Close">
         menu
@@ -53,7 +55,7 @@
       <ul class="navbar-nav px-0">
         <li class="border-top border-1 py-2"></li>
         <li class="nav-item d-flex justify-content-start align-items-center px-3 py-5">
-          <a href=""><img src="../assets/images/member-photo.png" alt="member-photo" width="60px" height="60px" class="me-6"></a>
+          <a href="index.html"><img src="../assets/images/member-photo.png" alt="member-photo" width="60px" height="60px" class="me-6"></a>
           <div class="member-info d-flex flex-column justify-content-start">
             <p class="text-neutral-3">會員</p>
             <p>Claire158872</p>
@@ -83,8 +85,7 @@
             <li><a class="nav-link px-3 py-2" href="#">會員管理</a></li>
           </ul>
         </li>
-        <li class="border-bottom border-3 py-2"></li>
-  
+        <li class="border-bottom border-3 py-2"></li>  
         <li class="nav-item px-3 mt-5">
           <a class="nav-link nav-link-mb" aria-current="page" href="#">
             <p>全部旅程</p>
