--- a/assets/scss/pages/_singleTrip.scss
+++ b/assets/scss/pages/_singleTrip.scss
@@ -115,7 +115,6 @@
         border-bottom: 2px solid $primary-3;
     }
 }
-
 .trip-pro-edit {
     width: 40px;
     height: 40px;
@@ -144,11 +143,18 @@
     color: $white;
     background: $primary-2;
 }
-
+.fs-14 {
+    font-size: 14px;
+}
+@media (max-width: 374px) {
+    .fs-14 {
+        font-size: 3.733vw;
+        /* 14px / 375 * 100 = 3.733vw */
+    }
+}
 .trip-body {
     z-index: 1;
 }
-
 .member-photo {
     width: 40px;
     height: 40px;
