修正topbtn/header/aos

--- a/layout/header-forpageMember.ejs
+++ b/layout/header-forpageMember.ejs
@@ -42,7 +42,7 @@
 
 <!--offcanvas-->
 <div class="navbar">
-  <div class="offcanvas offcanvas-end w-lg-25 w-100" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+  <div class="offcanvas offcanvas-end w-lg-25" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
     <div class="offcanvas-header py-3">
       <a class="navbar-brand position-relative" href="../pages/index-member.html">
         <img src="../assets/images/logo2.png" width="107px" height="40"  alt="logo" >
