--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -10,6 +10,26 @@
   object-fit: cover;
   overflow-y: hidden;
   width: 100%;
+  @include media-breakpoint-down(sm) {
+    height: 670px;
+  }
+  @include media-breakpoint-up(sm) {
+    height: 800px;
+  }
+
+  top: 0;
+  z-index: -1;
+  animation: fadeIn 2s ease-in-out;
+  @keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: scale(1.3); 
+    }
+    to {
+        opacity: 1;
+        transform: scale(1); 
+    }
+}
 }
 
 .search {
