--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -25,7 +25,7 @@
     <nav class="navbar navbar-light z-3 d-block d-lg-none" id="navBarB">
       <!--首頁navbar 靜止時出現-->
       <div class="d-block" id="navbarb">
-        <button class="navbar-toggler position-relative ms-auto pe-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="navbar-toggler position-relative ms-auto pe-0 pt-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
           <span class="material-symbols-outlined material-custom">menu</span>
         </button>
       </div>
@@ -50,7 +50,7 @@
 
 <!--offcanvas-->
 <div class="navbar">
-  <div class="offcanvas offcanvas-end w-lg-25 w-100" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+  <div class="offcanvas offcanvas-end w-lg-25" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
     <div class="offcanvas-header py-3">
       <a class="navbar-brand position-relative" href="index.html">
         <img src="../assets/images/logo2.png" width="107px" height="40" alt="logo">
