調整購物車連結

--- a/layout/index-content.ejs
+++ b/layout/index-content.ejs
@@ -1,5 +1,5 @@
 <section id="popular" class="popular py-7 py-lg-12 bg-eutral-5 z-1">
-  <img class="popular_bg-1 d-none d-md-block"  src="/assets/images/popular-bg-1.png" alt="bg-waves">
+  <img class="popular_bg-1 d-none d-md-block" src="/assets/images/popular-bg-1.png" alt="bg-waves">
   <div class="container position-relative">
     <img class="popular_bg-2 d-none d-md-block" data-aos="fade-left" src="/assets/images/popular-bg-2.png" alt="bg-airplane">
     <img class="popular_bg-3 d-none d-md-block" data-aos="fade-right" src="/assets/images/popular-bg-3.png" alt="bg-passport">
@@ -199,52 +199,58 @@
         <div class="swiper swiper-container">
           <div class="swiper-wrapper pb-4">
             <div class="swiper-slide">
-              <div class="recommend-swiper-img recommend-swiper-img_1">
+              <a href="singleTrip.html" class="recommend-swiper-img recommend-swiper-img_1 w-100">
                 <%- include('./layout/collect-love'); -%>
-              </div>
-              <a href="singleTrip.html" class="info bg-neutral-7 p-4 w-100">
+              </a>
+              <div class="info bg-neutral-7 p-4 w-100">
                 <h5 class="pb-2 fw-medium">澎湖花火節</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-neutral-2 fs-6">3天2夜澎湖花火節</p>
-                  <div class="cart rounded-circle">
-                    <span class="material-symbols-outlined position-absolute top-50 start-50 translate-middle">
-                      shopping_cart
-                    </span>
-                  </div>
+                  <a href="cart.html">
+                    <div class="cart rounded-circle">
+                      <span class="material-symbols-outlined position-absolute top-50 start-50 translate-middle">
+                        shopping_cart
+                      </span>
+                    </div>
+                  </a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="swiper-slide">
-              <div class="recommend-swiper-img recommend-swiper-img_1">
+              <a href="singleTrip.html" class="recommend-swiper-img recommend-swiper-img_1 w-100">
                 <%- include('./layout/collect-love'); -%>
-              </div>
-              <a href="singleTrip.html" class="info bg-neutral-7 p-4 w-100">
+              </a>
+              <div class="info bg-neutral-7 p-4 w-100">
                 <h5 class="pb-2 fw-medium">澎湖花火節</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-neutral-2 fs-6">3天2夜澎湖花火節</p>
-                  <div class="cart rounded-circle">
-                    <span class="material-symbols-outlined position-absolute top-50 start-50 translate-middle">
-                      shopping_cart
-                    </span>
-                  </div>
+                  <a href="cart.html">
+                    <div class="cart rounded-circle">
+                      <span class="material-symbols-outlined position-absolute top-50 start-50 translate-middle">
+                        shopping_cart
+                      </span>
+                    </div>
+                  </a>
                 </div>
-              </a>
+              </div>
             </div>
             <div class="swiper-slide">
-              <div class="recommend-swiper-img recommend-swiper-img_1">
+              <a href="singleTrip.html" class="recommend-swiper-img recommend-swiper-img_1 w-100">
                 <%- include('./layout/collect-love'); -%>
-              </div>
-              <a href="singleTrip.html" class="info bg-neutral-7 p-4 w-100">
+              </a>
+              <div class="info bg-neutral-7 p-4 w-100">
                 <h5 class="pb-2 fw-medium">澎湖花火節</h5>
                 <div class="d-flex justify-content-between align-items-center">
                   <p class="text-neutral-2 fs-6">3天2夜澎湖花火節</p>
-                  <div class="cart rounded-circle">
-                    <span class="material-symbols-outlined position-absolute top-50 start-50 translate-middle">
-                      shopping_cart
-                    </span>
-                  </div>
+                  <a href="cart.html">
+                    <div class="cart rounded-circle">
+                      <span class="material-symbols-outlined position-absolute top-50 start-50 translate-middle">
+                        shopping_cart
+                      </span>
+                    </div>
+                  </a>
                 </div>
-              </a>
+              </div>
             </div>
           </div>
         </div>
@@ -289,29 +295,25 @@
           </div>
           <swiper-container class="comment-swiper" slides-per-view="auto" space-between="16" loop="true">
             <swiper-slide>
-              <div class="comment-tag" data-aos="fade-left"
-              data-aos-anchor-placement="center-bottom" data-aos-offset="100" data-aos-duration="500">
+              <div class="comment-tag" data-aos="fade-left" data-aos-anchor-placement="center-bottom" data-aos-offset="100" data-aos-duration="500">
                 <img src="../assets/images/person-1.png" class="rounded-circle object-fit-cover" alt="person-1">
                 <p>這個行程太優惠了，行程又多</p>
               </div>
             </swiper-slide>
             <swiper-slide>
-              <div class="comment-tag" data-aos="fade-left"
-              data-aos-anchor-placement="center-bottom" data-aos-offset="100" data-aos-duration="500">
+              <div class="comment-tag" data-aos="fade-left" data-aos-anchor-placement="center-bottom" data-aos-offset="100" data-aos-duration="500">
                 <img src="../assets/images/person-2.png" class="rounded-circle object-fit-cover" alt="person-2">
                 <p>下次還會再來玩</p>
               </div>
             </swiper-slide>
             <swiper-slide>
-              <div class="comment-tag" data-aos="fade-left"
-              data-aos-anchor-placement="center-bottom" data-aos-offset="170" data-aos-duration="500">
+              <div class="comment-tag" data-aos="fade-left" data-aos-anchor-placement="center-bottom" data-aos-offset="170" data-aos-duration="500">
                 <img src="../assets/images/person-3.png" class="rounded-circle object-fit-cover" alt="person-3">
                 <p>還能加購更多</p>
               </div>
             </swiper-slide>
             <swiper-slide>
-              <div class="comment-tag" data-aos="fade-left"
-              data-aos-anchor-placement="center-bottom" data-aos-offset="240" data-aos-duration="500">
+              <div class="comment-tag" data-aos="fade-left" data-aos-anchor-placement="center-bottom" data-aos-offset="240" data-aos-duration="500">
                 <img src="../assets/images/person-1.png" class="rounded-circle object-fit-cover" alt="person-1">
                 <p>這個行程太優惠了，行程又多</p>
               </div>
@@ -326,20 +328,17 @@
   <h2 class="text-center fs-3 fs-lg-1 fw-bold pb-8 text-neutral-2">選擇我們的理由</h3>
     <div class="container">
       <div class="row">
-        <div class="col-lg-4 mb-6 mb-lg-0" data-aos="fade-up"
-        data-aos-anchor-placement="center-bottom" data-aos-offset="100">
+        <div class="col-lg-4 mb-6 mb-lg-0" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-offset="100">
           <img class="img-fluid d-block mx-auto mb-4 mb-lg-6 img" src="../assets/images/reason-1.png" alt="Illustration of reason 1">
           <h3 class="text-center text-primary-2 fs-5 fs-lg-4 fw-medium fw-lg-bold mb-4">創意無限的遊程選擇</h3>
           <p class="text-center px-lg-4">TravelTales提供遊程選擇，滿足旅行偏好和興趣，讓每一次旅行都充滿驚喜。</p>
         </div>
-        <div class="col-lg-4 mb-6 mb-lg-0" data-aos="fade-up"
-        data-aos-anchor-placement="center-bottom" data-aos-offset="150">
+        <div class="col-lg-4 mb-6 mb-lg-0" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-offset="150">
           <img class="img-fluid d-block mx-auto mb-4 mb-lg-6 img" src="../assets/images/reason-2.png" alt="Illustration of reason 2">
           <h3 class="text-center text-primary-2 fs-5 fs-lg-4 fw-medium fw-lg-bold mb-4">個性化推薦與定制</h3>
           <p class="text-center px-lg-4">TravelTales利用先進的算法和用戶數據，提供個性化的行程推薦和定制服務。</p>
         </div>
-        <div class="col-lg-4 mb-6 mb-lg-0" data-aos="fade-up"
-        data-aos-anchor-placement="center-bottom"  data-aos-offset="160">
+        <div class="col-lg-4 mb-6 mb-lg-0" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-offset="160">
           <img class="img-fluid d-block mx-auto mb-4 mb-lg-6 img" src="../assets/images/reason-3.png" alt="Illustration of reason 3">
           <h3 class="text-center text-primary-2 fs-5 fs-lg-4 fw-medium fw-lg-bold mb-4">旅行故事的創造與分享</h3>
           <p class="text-center px-lg-4">平台不僅僅是預訂工具，更是一個分享旅行故事的社區。</p>
