--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -544,4 +544,8 @@
   .border-shadow {
     box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
   }
+};
+
+#popular {
+  scroll-margin-top: 80px;
 }
