--- a/layout/index-content.ejs
+++ b/layout/index-content.ejs
@@ -1,187 +1,189 @@
-<section id="popular" class="popular py-7 py-lg-12 bg-eutral-5 z-1">
-  <img class="popular_bg-1 d-none d-md-block" src="/assets/images/popular-bg-1.png" alt="bg-waves">
-  <div class="container position-relative">
-    <img class="popular_bg-2 d-none d-md-block" data-aos="fade-left" src="/assets/images/popular-bg-2.png" alt="bg-airplane">
-    <img class="popular_bg-3 d-none d-md-block" data-aos="fade-right" src="/assets/images/popular-bg-3.png" alt="bg-passport">
-    <h3 class="text-center fs-3 fs-lg-1 pb-8 fw-bold text-neutral-2">熱門旅程</h3>
-    <div class="swiper swiper-popular mb-6">
-      <div class="swiper-wrapper pb-4 swiper-popular_wrapper">
-        <div class="swiper-slide swiper-popular_slide">
-          <a href="./singleTrip.html" class="w-100">
-            <div class="popular_img popular_img_1 d-flex justify-content-between">
-              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
-              <%- include('./layout/collect-love'); -%>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">大阪奇蹟郵輪</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-                  </svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
-              </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
-                <a href="./cart.html" class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
-                  </span>
-                </a>
-              </div>
-            </div>
-          </a>
-        </div>
-        <div class="swiper-slide swiper-popular_slide ">
-          <a href="./singleTrip.html" class="w-100">
-            <div class="position-relative">
-              <div class="position-absolute z-2 d-flex justify-content-between w-100">
-                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag ">台中</div>
+<section id="popular" >
+  <section class="popular py-7 py-lg-12 bg-eutral-5 z-1">
+    <img class="popular_bg-1 d-none d-md-block" src="/assets/images/popular-bg-1.png" alt="bg-waves">
+    <div class="container position-relative">
+      <img class="popular_bg-2 d-none d-md-block" data-aos="fade-left" src="/assets/images/popular-bg-2.png" alt="bg-airplane">
+      <img class="popular_bg-3 d-none d-md-block" data-aos="fade-right" src="/assets/images/popular-bg-3.png" alt="bg-passport">
+      <h3 class="text-center fs-3 fs-lg-1 pb-8 fw-bold text-neutral-2">熱門旅程</h3>
+      <div class="swiper swiper-popular mb-6">
+        <div class="swiper-wrapper pb-4 swiper-popular_wrapper">
+          <div class="swiper-slide swiper-popular_slide">
+            <a href="./singleTrip.html" class="w-100">
+              <div class="popular_img popular_img_1 d-flex justify-content-between">
+                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
                 <%- include('./layout/collect-love'); -%>
               </div>
-            </div>
-            <div class="swiper swiperPopular2">
-              <div class="swiper-wrapper ">
-                <div class="swiper-slide popular_slide-second">
-                  <div class="popular_img popular_img_2"></div>
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">大阪奇蹟郵輪</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
+                    </svg>
+                  </span>
+                  <span class="fw-medium fs-6 text-neutral-2">4.5</span>
                 </div>
-                <div class="swiper-slide popular_slide-second">
-                  <div class="popular_img popular_img_3"></div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
+                  <a href="./cart.html" class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </a>
                 </div>
-                <div class="swiper-slide popular_slide-second">
-                  <div class="popular_img popular_img_4"></div>
+              </div>
+            </a>
+          </div>
+          <div class="swiper-slide swiper-popular_slide ">
+            <a href="./singleTrip.html" class="w-100">
+              <div class="position-relative">
+                <div class="position-absolute z-2 d-flex justify-content-between w-100">
+                  <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag ">台中</div>
+                  <%- include('./layout/collect-love'); -%>
                 </div>
               </div>
-              <div class="swiper-pagination swiper-pagination-popular-two"></div>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">高美濕地 & 宮原眼科</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-                  </svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+              <div class="swiper swiperPopular2">
+                <div class="swiper-wrapper ">
+                  <div class="swiper-slide popular_slide-second">
+                    <div class="popular_img popular_img_2"></div>
+                  </div>
+                  <div class="swiper-slide popular_slide-second">
+                    <div class="popular_img popular_img_3"></div>
+                  </div>
+                  <div class="swiper-slide popular_slide-second">
+                    <div class="popular_img popular_img_4"></div>
+                  </div>
+                </div>
+                <div class="swiper-pagination swiper-pagination-popular-two"></div>
               </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 600 起</p>
-                <a href="./cart.html" class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">高美濕地 & 宮原眼科</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
+                    </svg>
                   </span>
-                </a>
+                  <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 600 起</p>
+                  <a href="./cart.html" class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </a>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="swiper-slide swiper-popular_slide">
-          <a href="./singleTrip.html" class="w-100">
-            <div class="popular_img popular_img_5 d-flex justify-content-between">
-              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
-              <%- include('./layout/collect-love'); -%>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">日本環球影城</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-                  </svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.8</span>
+            </a>
+          </div>
+          <div class="swiper-slide swiper-popular_slide">
+            <a href="./singleTrip.html" class="w-100">
+              <div class="popular_img popular_img_5 d-flex justify-content-between">
+                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">日本</div>
+                <%- include('./layout/collect-love'); -%>
               </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 3,500 起</p>
-                <a href="./cart.html" class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">日本環球影城</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
+                    </svg>
                   </span>
-                </a>
+                  <span class="fw-medium fs-6 text-neutral-2">4.8</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 3,500 起</p>
+                  <a href="./cart.html" class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </a>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="swiper-slide swiper-popular_slide">
-          <a href="./singleTrip.html" class="w-100">
-            <div class="popular_img popular_img_6 d-flex justify-content-between">
-              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">歐洲</div>
-              <%- include('./layout/collect-love'); -%>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">4天3夜 克里穆圖火山</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-                  </svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+            </a>
+          </div>
+          <div class="swiper-slide swiper-popular_slide">
+            <a href="./singleTrip.html" class="w-100">
+              <div class="popular_img popular_img_6 d-flex justify-content-between">
+                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">歐洲</div>
+                <%- include('./layout/collect-love'); -%>
               </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
-                <a href="./cart.html" class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">4天3夜 克里穆圖火山</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
+                    </svg>
                   </span>
-                </a>
+                  <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 32,000 起</p>
+                  <a href="./cart.html" class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </a>
+                </div>
               </div>
-            </div>
-          </a>
-        </div>
-        <div class="swiper-slide swiper-popular_slide">
-          <a href="./singleTrip.html" class="w-100">
-            <div class="popular_img popular_img_7 d-flex justify-content-between">
-              <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">澎湖</div>
-              <%- include('./layout/collect-love'); -%>
-            </div>
-            <div class="p-4 bg-white popular_content">
-              <h5 class="mb-2 fw-medium fs-5 text-neutral-1">澎湖花火節</h5>
-              <div class="d-flex align-items-center mb-2">
-                <span class="star-icon">
-                  <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
-                  </svg>
-                </span>
-                <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+            </a>
+          </div>
+          <div class="swiper-slide swiper-popular_slide">
+            <a href="./singleTrip.html" class="w-100">
+              <div class="popular_img popular_img_7 d-flex justify-content-between">
+                <div class="fs-6 text-white fw-medium bg-primary-2 popular_img-tag">澎湖</div>
+                <%- include('./layout/collect-love'); -%>
               </div>
-              <div class="d-flex justify-content-between align-items-center">
-                <p class="text-primary-2 popular_price fw-bold">NT$ 15,000 起</p>
-                <a href="./cart.html" class="popular_cart position-relative">
-                  <span class="material-symbols-outlined position-relative z-1">
-                    shopping_cart
+              <div class="p-4 bg-white popular_content">
+                <h5 class="mb-2 fw-medium fs-5 text-neutral-1">澎湖花火節</h5>
+                <div class="d-flex align-items-center mb-2">
+                  <span class="star-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FACC44">
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 17.27 18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z" />
+                    </svg>
                   </span>
-                </a>
+                  <span class="fw-medium fs-6 text-neutral-2">4.5</span>
+                </div>
+                <div class="d-flex justify-content-between align-items-center">
+                  <p class="text-primary-2 popular_price fw-bold">NT$ 15,000 起</p>
+                  <a href="./cart.html" class="popular_cart position-relative">
+                    <span class="material-symbols-outlined position-relative z-1">
+                      shopping_cart
+                    </span>
+                  </a>
+                </div>
               </div>
-            </div>
-          </a>
+            </a>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="d-flex justify-content-center align-items-center">
-      <div class="pagination pagination-popular text-center p-4">
-        <div class="swiper-popular-prev material-symbols-outlined">
-          arrow_back_ios
-        </div>
-        <div class="swiper-pagination-popular"></div>
-        <div class="swiper-popular-next material-symbols-outlined">
-          arrow_forward_ios
+      <div class="d-flex justify-content-center align-items-center">
+        <div class="pagination pagination-popular text-center p-4">
+          <div class="swiper-popular-prev material-symbols-outlined">
+            arrow_back_ios
+          </div>
+          <div class="swiper-pagination-popular"></div>
+          <div class="swiper-popular-next material-symbols-outlined">
+            arrow_forward_ios
+          </div>
         </div>
       </div>
+  
     </div>
-
-  </div>
+  </section>
 </section>
 
 <section class="recommend py-7 py-lg-12">
