--- a/assets/scss/pages/_index.scss
+++ b/assets/scss/pages/_index.scss
@@ -3,16 +3,18 @@
     linear-gradient(180deg, rgba(255, 255, 255, 0) 52.83%, #FFFFFF 100%),
     linear-gradient(360deg, rgba(0, 47, 218, 0.1) 22.53%, rgba(14, 75, 196, 0.2) 100%),
     linear-gradient(360deg, rgba(0, 0, 0, 0) 14.6%, rgba(0, 0, 0, 0.2) 42.59%, rgba(0, 0, 0, 0.172017) 61.79%, rgba(0, 0, 0, 0.0423077) 93.31%),
-    url("../assets/images/banner.png");
+    url("/assets/images/banner.png");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   object-fit: cover;
   overflow-y: hidden;
   width: 100%;
+
   @include media-breakpoint-down(sm) {
     height: 670px;
   }
+
   @include media-breakpoint-up(sm) {
     height: 800px;
   }
@@ -20,16 +22,18 @@
   top: 0;
   z-index: -1;
   animation: fadeIn 2s ease-in-out;
+
   @keyframes fadeIn {
     from {
-        opacity: 0;
-        transform: scale(1.3); 
+      opacity: 0;
+      transform: scale(1.3);
     }
+
     to {
-        opacity: 1;
-        transform: scale(1); 
+      opacity: 1;
+      transform: scale(1);
     }
-}
+  }
 }
 
 .search {
@@ -544,7 +548,7 @@
   .border-shadow {
     box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15), 0px 1px 2px 0px rgba(0, 0, 0, 0.3);
   }
-};
+}
 
 #popular {
   scroll-margin-top: 80px;
